# Aria

./: .gitignore  .gitmodules  Aria.cpp  CMakeLists.txt  CMakePresets.json  DatabaseTest.hpp  LayeredPanel.cpp  MainFrame.cpp  MainFrame.hpp  Prerequisites.cpp  README.md  Signal.hpp  TestDatabase.cpp  TestDatabase.hpp  TestPanel.hpp  TestsCounts.cpp  vcpkg.json  xmake.lua
.github/workflows/: cmake.yml  dependencies.yml
Aui/: AuiDockArt.hpp  AuiTabArt.hpp  AuiToolBarArt.hpp
Database/: DbConnection.hpp  DbParameter.cpp  DbParameterBinding.hpp  DbParameteredObject.cpp  DbResult.cpp  DbRow.cpp  DbStatement.cpp  DbValuePolicy.inl  DbValuedObject.cpp  DbValuedObject.hpp
Editor/: LanguageInfo.hpp  SceneFileDialog.cpp  SceneFileEditor.cpp  StcContext.cpp  StcTextEditor.cpp  StyleInfo.cpp
Model/: DataViewTestStatusRenderer.hpp  TreeModel.cpp  TreeModelNode.cpp
data/vcpkg-ports/wxcharts/: add_unit.patch  portfile.cmake
include/Aria/: Options.hpp  Plugin.hpp  Prerequisites.hpp  StringUtils.hpp
include/Aria/Aui/: AuiDockArt.hpp  AuiTabArt.hpp  AuiToolBarArt.hpp
include/Aria/Database/: DbPrerequisites.hpp
include/Aria/FileSystem/: FileSystem.hpp
include/AriaLib/: BeginExternHeaderGuard.hpp  CountedValue.hpp  Options.hpp  Plugin.hpp  Prerequisites.hpp  Signal.hpp  StringUtils.hpp  TestsCounts.hpp
include/AriaLib/Aui/: AuiDockArt.hpp  AuiTabArt.hpp  AuiToolBarArt.hpp
include/AriaLib/Database/: DatabaseTest.hpp  DbConnection.hpp  DbField.hpp  DbFieldType.hpp  DbParameter.hpp  DbParameterBinding.hpp  DbParameterType.hpp  DbParameteredObject.hpp  DbPrerequisites.hpp  DbResult.hpp  DbRow.hpp  DbStatement.hpp  DbStatementParameter.hpp  (+9 more)
source/: Aria.cpp  Aria.hpp  CMakeLists.txt  ConfigurationDialog.hpp  DatabaseTest.cpp  MainFrame.cpp  MainFrame.hpp  Prerequisites.hpp  StringUtils.cpp  TestPanel.cpp  TestsCounts.hpp
source/Aria/: Aria.cpp  Aria.hpp  CMakeLists.txt  CategoryPanel.cpp  ConfigurationDialog.cpp  ConfigurationDialog.hpp  DatabaseTest.cpp  DatabaseTest.hpp  DiffImage.cpp  DiffImage.hpp  FileSystem.cpp  FileSystem.hpp  GitFileSystemPlugin.cpp  GitFileSystemPlugin.hpp  MainFrame.cpp  MainFrame.hpp  Options.cpp  Plugin.cpp  Prerequisites.cpp  Prerequisites.hpp  RendererPage.cpp  RendererPage.hpp  StringUtils.hpp  TestDatabase.cpp  TestDatabase.hpp  TestPanel.cpp  TestPanel.hpp  TestsCounts.cpp  TestsCounts.hpp  TestsMainPanel.cpp  TestsMainPanel.hpp
source/Aria/Aui/: AuiDockArt.hpp  AuiTabArt.cpp  AuiTabArt.hpp  AuiToolBarArt.hpp
source/Aria/Database/: DatabaseTest.cpp  DatabaseTest.hpp  DbConnection.cpp  DbConnection.hpp  DbDateTimeHelpers.cpp  DbDateTimeHelpers.hpp  DbFieldType.hpp  DbParameter.cpp  DbParameter.hpp  DbParameterBinding.hpp  DbParameteredObject.cpp  DbParameteredObject.hpp  DbPrerequisites.hpp  DbResult.cpp  DbRow.cpp  DbStatement.cpp  DbStatement.hpp  DbStatementParameter.cpp  DbStatementParameter.hpp  DbTransaction.cpp  DbTransaction.hpp  DbValue.inl  DbValueBase.cpp  DbValueBase.hpp  DbValuePolicy.hpp  DbValuePolicy.inl  DbValuedObject.cpp  DbValuedObject.hpp  DbValuedObjectInfos.cpp  DbValuedObjectInfos.hpp  TestDatabase.cpp  TestDatabase.hpp
source/Aria/Editor/: LanguageInfo.cpp  LanguageInfo.hpp  SceneFileDialog.cpp  SceneFileDialog.hpp  SceneFileEditor.cpp  SceneFileEditor.hpp  StcTextEditor.cpp  StyleInfo.hpp
source/Aria/FileSystem/: FileSystem.cpp  FileSystem.hpp  GitFileSystemPlugin.cpp  GitFileSystemPlugin.hpp
source/Aria/Model/: DataViewTestStatusRenderer.cpp  DataViewTestStatusRenderer.hpp  ModelPrerequisites.hpp  TreeModel.cpp  TreeModel.hpp  TreeModelNode.cpp  TreeModelNode.hpp
source/Aria/Model/RunsModel/: RunStatusRenderer.cpp  RunStatusRenderer.hpp  RunTreeModel.cpp  RunTreeModel.hpp  RunTreeModelNode.cpp  RunTreeModelNode.hpp  RunsModelPrerequisites.hpp
source/Aria/Model/TestsModel/: TestStatusRenderer.cpp  TestStatusRenderer.hpp  TestTreeModel.cpp  TestTreeModel.hpp  TestTreeModelNode.cpp  TestTreeModelNode.hpp  TestsModelPrerequisites.hpp
source/Aria/Panels/: CategoryPanel.cpp  CategoryPanel.hpp  LayeredPanel.cpp  LayeredPanel.hpp  TestPanel.cpp  TestPanel.hpp  TestResultsPanel.cpp  TestResultsPanel.hpp  TestRunsList.cpp  TestRunsList.hpp  TestStatsPanel.cpp  TestStatsPanel.hpp
source/Aria/flip/: FLIP.h  image.h  sharedflip.h  tensor.h
source/Aria/xpms/: save.xpm
source/Aria/xpms/16x16/: acceptable.xpm  crashed.xpm  ignored.xpm  negligible.xpm  none.xpm  notrun.xpm  outofdate.xpm  outofdate2.xpm  pending.xpm  progress_1.xpm  progress_10.xpm  progress_11.xpm  progress_12.xpm  progress_2.xpm  progress_3.xpm  progress_4.xpm  progress_5.xpm  progress_6.xpm  progress_7.xpm  progress_8.xpm  progress_9.xpm  running.xpm  unacceptable.xpm  unprocessed.xpm
source/AriaLib/: CMakeLists.txt  Options.cpp  Plugin.cpp  Prerequisites.cpp  StringUtils.cpp  TestsCounts.cpp
source/AriaLib/Aui/: AuiDockArt.cpp  AuiTabArt.cpp  AuiToolBarArt.cpp
source/AriaLib/Database/: DatabaseTest.cpp  DbConnection.cpp  DbParameteredObject.cpp  DbResult.cpp  DbRow.cpp  DbStatement.cpp  DbStatementParameter.cpp  DbTransaction.cpp  DbValuedObject.cpp  DbValuedObjectInfos.cpp  TestDatabase.cpp
source/AriaLib/Editor/: LanguageInfo.cpp  StcTextEditor.cpp  StyleInfo.cpp  TestFileDialog.cpp  TestFileEditor.cpp
source/AriaLib/FileSystem/: FileSystem.cpp
source/Aui/: AuiDockArt.cpp  AuiTabArt.cpp
source/Database/: DbField.cpp  DbPrerequisites.hpp  DbValuedObjectInfos.cpp
source/DiffImage/: CMakeLists.txt  DiffImage.cpp
source/DiffImageLib/: CMakeLists.txt  DiffImageLib.cpp  DiffImageLib.hpp
source/Editor/: SceneFileDialog.hpp
source/Model/: DataViewTestStatusRenderer.cpp  ModelPrerequisites.hpp  TreeModel.hpp  TreeModelNode.hpp
source/Plugins/: CMakeLists.txt
source/Plugins/Castor3D/: CMakeLists.txt  Castor3DPlugin.cpp  Castor3DPlugin.hpp  CscnLanguageInfo.cpp  CscnLanguageInfo.hpp
source/Plugins/Castor3D/Editor/: EditorModule.hpp  LanguageInfo.cpp  LanguageInfo.hpp  SceneFileDialog.cpp  SceneFileDialog.hpp  SceneFileEditor.cpp  SceneFileEditor.hpp  StcContext.hpp  StcTextEditor.cpp  StcTextEditor.hpp
xmake/: Executable.rc.in
(+8 files in other folders)
