if ( WIN32 OR APPLE OR Aria_FORCE_VCPKG_wxWidgets )
	find_package( wxWidgets CONFIG REQUIRED core base adv aui stc )
else ()
	find_package( wxWidgets REQUIRED core base adv aui stc )
	include( ${wxWidgets_USE_FILE} )
endif ()

if( APPLE )
	set( GTK_FOUND TRUE )
	set( GTK_LIBRARIES
		"-framework AppKit"
		"-framework QuartzCore"
		"-framework Metal"
	)
elseif ( WIN32 )
	set( GTK_FOUND TRUE )
	set( GTK2_FOUND ${GTK_FOUND} )
else()
	find_package( GTK3 QUIET )
	find_package( X11 QUIET )
	if ( GTK3_FOUND )
		set( GTK_FOUND ${GTK3_FOUND} )
		set( GTK_INCLUDE_DIRS ${GTK3_INCLUDE_DIRS} )
		set( GTK_LIBRARIES ${GTK3_LIBRARIES} )
		set( GTK2_FOUND ${GTK_FOUND} )
		set( GTK2_INCLUDE_DIRS ${GTK_INCLUDE_DIRS} )
		set( GTK2_LIBRARIES ${GTK_LIBRARIES} )
	else ()
		set( GTK_FOUND FALSE )
		set( GTK2_FOUND ${GTK_FOUND} )
	endif ()
endif()

add_subdirectory( wxCharts )

if ( wxWidgets_FOUND AND GTK_FOUND )
	add_subdirectory( Aria )
	add_subdirectory( Plugins )
else ()
	if ( NOT wxWidgets_FOUND )
		message( SEND_ERROR "no (missing wxWidgets)" )
	endif ()
	if ( NOT GTK_FOUND )
		message( SEND_ERROR "no (missing gtk)" )
	endif ()
endif ()
